@@ -50,6 +50,7 @@ data:extend({
         { position = { -0, -1.1 }, max_underground_distance = 1 },
         { position = { 0, 1.1 }, max_underground_distance = 1 },
       },
+      hide_connection_info = true,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -246,6 +247,7 @@ data:extend({
         { position = { 0, -1.6 }, max_underground_distance = 1 },
         { position = { 0, 1.6 }, max_underground_distance = 1 },
       },
+      hide_connection_info = true,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -426,6 +428,7 @@ data:extend({
         { position = { 0, -2.6 }, max_underground_distance = 1 },
         { position = { 0, 2.6 }, max_underground_distance = 1 },
       },
+      hide_connection_info = true,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -607,6 +610,7 @@ data:extend({
         { position = { 1.6, 0 }, max_underground_distance = 1 },
         { position = { -1.6, 0 }, max_underground_distance = 1 },
       },
+      hide_connection_info = true,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -787,6 +791,7 @@ data:extend({
         { position = { 0, -1.6 }, max_underground_distance = 1 },
         { position = { -1.6, 0 }, max_underground_distance = 1 },
       },
+      hide_connection_info = true,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
@@ -969,6 +974,7 @@ data:extend({
         { position = { 1.6, 0 }, max_underground_distance = 1 },
         { position = { -1.6, 0 }, max_underground_distance = 1 },
       },
+      hide_connection_info = true,
     },
     window_bounding_box = { { 0, 0 }, { 0, 0 } },
     flow_length_in_ticks = 360,
