@@ -2,6 +2,7 @@
 Version: 1.3.2
 Date: ????
   Changes:
+    - Removed blue fluidbox arrows from ducts (#11)
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2022-03-12
